--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,5 @@
     transform: rotate(360deg);
   }
 }
+
+@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
